# clinical-ml-pipeline

./: .env.example  .gitignore  DEPENDENCY_SUMMARY.txt  DIRECT_EXECUTION_BLOCK.py  FINAL_STATUS_REPORT.txt  README.md  check_deployment.bat  check_git_status.bat  install_and_test.bat  main.py  package-lock.json  pyproject.toml  red_flags_test_output.txt  requirements.txt  requirements_COMPLETE.txt  run_check.bat  run_main_pipeline.py  run_pipeline.py  test_api_key.py  test_ocr.py  test_red_flags.py  test_severity.py  validate_csv_dataset.py
.gemini/: analyze_imports.py  detected_imports.txt  test_imports.py  validate_deps.py
app/: __init__.py  main.py  routes.py
config/: __init__.py  clinical_knowledge_base.json  clinical_priors.json  disease_id_mapping.json  settings.py
frontend/: ENHANCED_TYPES.ts  next.config.js  package-lock.json  package.json
models/: __init__.py  schemas.py
prompts/: clinical_reasoning.py
scripts/: __init__.py  analyze_statpearls_samples.py  check_embedding_format.py  compare_3way_diagnosis.py  compare_diagnosis_datasets.py  compress_csv.py  debug_ddxplus.py  decompress_csv.py  diagnose_retrieval.py  download_ocr_models.py  estimate_statpearls_ingestion.py  fix_similarity_threshold.py  index_pmc.py  ingest_open_patients.py  ingest_statpearls_chunks.py  ingest_statpearls_trial.py  init_db.py  load_asclepius_notes.py  load_augmented_notes.py  load_medcase_reasoning.py  recreate_vector_table.py  run_retrieval.py  run_test_ingestion.py  show_database_topics.py  test_chain_of_diagnosis.py  test_chunk_structure.py  test_clinical_guidelines.py  (+11 more)
(+79 files in other folders)
